fix(rearranged the layout and let footer position fixed): rearranged layout
cancel navBar and sideBar's top style and use header's height instead, made sideBar longer  and
audioPlayer's position fixed to avoid scrollbars that appear suddenly

--- a/src/components/navBar/navBar.scss
+++ b/src/components/navBar/navBar.scss
@@ -3,7 +3,7 @@
 .nav{
   position: absolute;
   left: $sideBarWidth;
-  top: $headerHeight;
+  // top: $headerHeight;
   width: 100%-$sideBarWidth;
   height: 3em;
   background-color: rgb(227, 242, 255);
