--- a/src/components/sideBar/sideBar.scss
+++ b/src/components/sideBar/sideBar.scss
@@ -3,7 +3,7 @@
 .List{
     position: absolute;
     left: 0;
-    top: $headerHeight;
+    // top: $headerHeight;
     width: $sideBarWidth;
     height: 100%;
     margin: 0;
